# gitflow

./: README.md  main.py  pyproject.toml
src/: CategoryClass.py  MixinProduct.py  ProductClass.py  utils.py
tests/: test_CategoryClass.py  test_MixinProduct.py  test_ProductClass.py  test_utils.py
